# textend

./: .editorconfig  .gitignore  eslint.config.ts  index.html  package.json  prettier.config.ts  tsconfig.build.json  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: HotkeysProvider.tsx  Icon.tsx
src/extensions/: gutter.ts  session.ts  status.ts
src/hooks/: index.ts  useEditor.ts  useHotkeys.ts
src/stores/: editor.ts
src/styles/: editor.css  statusbar.css
src/utils/: editor.ts  file.ts  format.ts  session.ts
src/views/: Editor.tsx  StatusBar.tsx
